@@ -36,8 +36,9 @@ Send well researched bug reports to the author. Home: zxid.org\n\
 Usage: zxcall [options] -s SESID -t SVCTYPE <soap_req_body.xml >soap_resp.xml\n\
        zxcall [options] -a IDP USER:PW -t SVCTYPE <soap_req_body.xml >soap_resp.xml\n\
        zxcall [options] -a IDP USER:PW -t SVCTYPE -nd # Discovery only\n\
-       zxcall [options] -a IDP USER:PW # Authentication only\n\
-       zxcall [options] -s SESID -l    # List session cache\n\
+       zxcall [options] -a IDP USER:PW   # Authentication only\n\
+       zxcall [options] -s SESID -im EID # Identity Mapping to EID\n\
+       zxcall [options] -s SESID -l      # List session cache\n\
   -c CONF          Optional configuration string (default -c PATH=/var/zxid/)\n\
                    Most of the configuration is read from /var/zxid/zxid.conf\n\
   -s SESID         Session ID referring to a directory in /var/zxid/ses\n\
@@ -51,6 +52,7 @@ Usage: zxcall [options] -s SESID -t SVCTYPE <soap_req_body.xml >soap_resp.xml\n\
   -din N           Discovery index (default: 1=pick first).\n\
   -az AZCREDS      Optional authorization credentials. Query string format.\n\
                    N.B. For authorization to work PDP_URL configuration option is needed.\n\
+  -im DSTEID       Map session's login identity to identity at some other SP\n\
   -e SOAPBODY      Pass SOAP body as argument (default is to read from STDIN)\n\
   -b               In response, only return content of SOAP body, omitting Envelope and Body.\n\
   -nd              Discovery only (you need to specify -t SVCTYPE as well)\n\
@@ -80,6 +82,7 @@ char* svc = 0;
 char* url = 0;
 char* di  = 0;
 char* az  = 0;
+char* im_to = 0;
 char* bdy = 0;
 zxid_conf* cf;
 
@@ -170,6 +173,52 @@ static void opt(int* argc, char*** argv, char*** env)
       }
       break;
 
+    case 'i':
+      switch ((*argv)[0][2]) {
+      case 'm':
+	++(*argv); --(*argc);
+	if ((*argc) < 1) break;
+	im_to = (*argv)[0];
+	continue;
+      }
+      break;
+
+    case 'l':
+      switch ((*argv)[0][2]) {
+      case '\0':
+	++listses;
+	continue;
+#if 0
+      case 'i':
+	if (!strcmp((*argv)[0],"-license")) {
+	  extern char* license;
+	  fprintf(stderr, license);
+	  exit(0);
+	}
+	break;
+#endif
+      }
+      break;
+
+    case 'n':
+      switch ((*argv)[0][2]) {
+      case 'd':
+	++di_only;
+	continue;
+      case '\0':
+	++dryrun;
+	continue;
+      }
+      break;
+
+    case 'q':
+      switch ((*argv)[0][2]) {
+      case '\0':
+	verbose = 0;
+	continue;
+      }
+      break;
+
     case 's':
       switch ((*argv)[0][2]) {
       case '\0':
@@ -196,42 +245,6 @@ static void opt(int* argc, char*** argv, char*** env)
 	++(*argv); --(*argc);
 	if ((*argc) < 1) break;
 	url = (*argv)[0];
-	continue;
-      }
-      break;
-
-    case 'n':
-      switch ((*argv)[0][2]) {
-      case 'd':
-	++di_only;
-	continue;
-      case '\0':
-	++dryrun;
-	continue;
-      }
-      break;
-
-    case 'l':
-      switch ((*argv)[0][2]) {
-      case '\0':
-	++listses;
-	continue;
-#if 0
-      case 'i':
-	if (!strcmp((*argv)[0],"-license")) {
-	  extern char* license;
-	  fprintf(stderr, license);
-	  exit(0);
-	}
-	break;
-#endif
-      }
-      break;
-
-    case 'q':
-      switch ((*argv)[0][2]) {
-      case '\0':
-	verbose = 0;
 	continue;
       }
       break;
@@ -372,6 +385,7 @@ int zxcall_main(int argc, char** argv, char** env)
   zxid_ses* ses;
   zxid_entity* idp_meta;
   zxid_epr* epr;
+  zxid_nid* nameid;
 
   strncpy(zx_instance, "\tzxcall", sizeof(zx_instance));
   cf = zxid_new_conf_to_cf(0);
@@ -403,6 +417,13 @@ int zxcall_main(int argc, char** argv, char** env)
 
   if (listses)
     return zxid_print_session(cf, ses);   
+
+  if (im_to) {
+    D("Map to identity at eid(%s)", im_to);
+    zxid_map_identity_token(cf, ses, im_to, 0);
+    //printf("%.*s\n", nameid->gg.content->len, nameid->gg.content->s);
+    return 0;
+  }
 
   if (di_only) {
     D("Discover only. svctype(%s), index=%d", STRNULLCHK(svc), din);
